# AI_Engineering

./: README.md  homework1.ipynb  pyproject.toml
01-foundation/homework/books/: download_books.py  homework1.ipynb
03-agents/: search_wikipedia.ipynb
