[project]
name = "ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.4",
    "jupyter>=1.1.1",
    "markitdown[pdf]>=0.1.5",
    "minsearch>=0.0.10",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "pydantic-ai>=1.88.0",
]
